dockerize dev env, upgrade libs, remove unused libs