@@ -12,14 +12,16 @@ sources in (Compile,doc) := Seq.empty
 
 publishArtifact in (Compile, packageDoc) := false
 
+// uncomment this when the sbt version is updated to > 0.13.7
+// updateOptions := updateOptions.value.withCachedResolution(true)
+
 resolvers := ("Atlassian Releases" at "https://maven.atlassian.com/public/") +: resolvers.value
 
 resolvers += Resolver.sonatypeRepo("snapshots")
 
 resolvers ++= Seq(
   "geosolutions" at "http://maven.geo-solutions.it/",
-  "boundlessgeo" at "https://repo.boundlessgeo.com/main/org/",
-  "osgeo" at "http://download.osgeo.org/webdav/geotools/"
+  "OSGeo" at "https://repo.osgeo.org/repository/release/"
 )
 
 libraryDependencies ++= Seq(
@@ -31,32 +33,18 @@ libraryDependencies ++= Seq(
   "com.typesafe.slick" %% "slick" % "2.1.0",
   "com.typesafe.play" %% "play-slick" % "0.8.0",
   "org.postgresql" % "postgresql" % "9.3-1102-jdbc4",
-  "com.mohiva" %% "play-silhouette" % "2.0",
-  "com.mohiva" %% "play-silhouette-testkit" % "2.0" % "test",
-  "org.webjars" %% "webjars-play" % "2.3.0",
-  "org.webjars" % "bootstrap" % "3.1.1",
-  "org.webjars" % "jquery" % "1.11.0",
+  "com.mohiva" %% "play-silhouette" % "2.0.2",
   "net.codingwell" %% "scala-guice" % "4.0.0-beta5",
-  "com.mohiva" %% "play-silhouette-testkit" % "2.0" % "test",
-  "com.typesafe.play.extras" %% "play-geojson" % "1.2.0",
-  "com.github.tminglei" %% "slick-pg" % "0.8.2",
-  "org.slf4j" % "slf4j-api"       % "1.7.7",
-  "org.slf4j" % "jcl-over-slf4j"  % "1.7.7",
-  "joda-time" % "joda-time" % "2.9.4",
-  "javax.media" % "jai_core" % "1.1.3" from "http://maven.geomajas.org/nexus/content/groups/public/javax/media/jai-core/1.1.3",
-  "javax.media" % "jai_codec" % "1.1.3" from "http://maven.geomajas.org/nexus/content/groups/public/javax/media/jai_codec/1.1.3",
-  "javax.media" % "jai_imageio" % "1.1" from "http://maven.geomajas.org/nexus/content/groups/public/javax/media/jai_imageio/1.1",
-  "org.geotools" % "gt-coverage" % "14.3",
-  "org.geotools" % "gt-epsg-hsql" % "14.3",
-  "org.geotools" % "gt-geotiff" % "14.3",
-  "org.geotools" % "gt-main" % "14.3",
-  "org.geotools" % "gt-referencing" % "14.3" excludeAll(
-  	ExclusionRule(organization = "javax.media"),
-	  ExclusionRule(organization = "jgridshift")
-  )
+  "com.typesafe.play.extras" %% "play-geojson" % "1.3.1",
+  "com.github.tminglei" %% "slick-pg" % "0.8.4",
+  "joda-time" % "joda-time" % "2.10.8",
+  "org.geotools" % "gt-coverage" % "23.0",
+  "org.geotools" % "gt-epsg-hsql" % "23.0",
+  "org.geotools" % "gt-geotiff" % "23.0",
+  "org.geotools" % "gt-main" % "23.0" exclude("javax.media", "jai_core"),
+  "org.geotools" % "gt-referencing" % "23.0",
+  "org.geotools" % "gt-shapefile" % "23.0"
 ).map(_.force())
-
-libraryDependencies ~= { _.map(_.exclude("org.slf4j", "slf4j-jdk14")) }
 
 lazy val root = (project in file(".")).enablePlugins(PlayScala)
 
@@ -73,9 +61,9 @@ scalacOptions ++= Seq(
   "-Ywarn-numeric-widen" // Warn when numerics are widened.
 )
 
-javacOptions ++= Seq("-source", "1.7", "-target", "1.7")
+javacOptions ++= Seq("-source", "1.8", "-target", "1.8")
 
-javaOptions ++= Seq("-Xmx3072M", "-Xms2048M", "-XX:MaxPermSize=3072M")
+javaOptions ++= Seq("-Xmx3072M", "-Xms2048M")
 
 javaOptions in Test += "-Dconfig.file=conf/application.test.conf"
 
